try to fix image bug in deployed site- img not showing up

--- a/src/javascripts/helpers/data/projects.json
+++ b/src/javascripts/helpers/data/projects.json
@@ -6,7 +6,7 @@
     "screenshot": "src/images/bearwatcher.png",
     "description": "This application allows users to track a bear that they see out in the wild by uploading a picture!', // A good project description includes 'the what', 'the why', and 'the how'.",
     "technologiesUsed": "HTML | CSS | JavaScript | Bootstrap | Github",
-    "available": "true",
+    "available": "false",
     "url": "https://lizb-bear-watcher.netlify.app/",
     "githubProject": "https://github.com/liz-barnes/bear-watcher",
     "githubUrl": "https://github.com/nss-evening-cohort-8/js-part-deux"
@@ -18,7 +18,7 @@
     "screenshot": "src/images/petadoption.png",
     "description": "This application allows users to filter through and view the pets that are available for adoption.",
     "technologiesUsed": "HTML | CSS | Vanilla JavaScript | Version Control with Github",
-    "available": "true",
+    "available": "false",
     "url": "https://preciouspetsadoptionagency.netlify.app/#",
     "githubProject": "https://github.com/liz-barnes/pet-adoption",
     "githubUrl": ""
